--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/masked-view": "^0.1.7",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.6",
+    "apollo-cache-persist": "^0.1.1",
     "graphql": "^14.6.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
