--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "client",
   "version": "0.0.1",
+  "author": "Naoufal ELYOUSSOUFI <n.elyousfi@gmail.com> (https://github.com/nelyousfi)",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
